deploy/argo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-deployment
  namespace: argocd
  labels:
    app: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank
  template:
    metadata:
      labels:
        app: digital-bank
    spec:
      containers:
        - name: digital-bank
          image: image-registry.openshift-image-registry.svc:5000/digibank/bank:latest
          imagePullPolicy: Always
          ports:
            - name: db-bank-port
              containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: digital-bank-svc
  namespace: argocd
spec:
  selector:
    app: digital-bank
  ports:
    - name: https
      port: 8443
      targetPort: db-bank-port
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: digital-bank-route
  namespace: argocd
spec:
  to:
    kind: Service
    name: digital-bank-svc
  port:
    targetPort: https
  tls:
    termination: passthrough

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-broker-deployment
  namespace: argocd
  labels:
    app: digital-bank-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-broker
  template:
    metadata:
      labels:
        app: digital-bank-broker
    spec:
      containers:
      - name: digital-bank-broker
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/digibank/broker:latest   
        ports:
          - name: broker-port-1
            containerPort: 8161
          - name: broker-port-2
            containerPort: 61616

---

apiVersion: v1
kind: Service
metadata:
  name: digital-bank-broker-svc
  namespace: argocd
spec:
  selector:
    app: digital-bank-broker
  ports:
    - name: http1
      port: 8161
      targetPort: broker-port-1  
    - name: http2
      port: 61616
      targetPort: broker-port-2 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-credit-deployment
  namespace: argocd
  labels:
    app: digital-bank-credit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-credit
  template:
    metadata:
      labels:
        app: digital-bank-credit
    spec:
      containers:
      - name: digital-bank-credit
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/digibank/credit:latest   
        ports:
          - name: db-credit-port
            containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: digital-bank-credit-svc
  namespace: argocd
spec:
  selector:
    app: digital-bank-credit
    type: NodePort
  ports:
    - name: http-credit
      port: 8085  
      targetPort: db-credit-port
